# PrynAI-chat

./: .gitignore  Makefile  README.md  federated-cred.json
.github/workflows/: build_deploy_chainlit.yml  build_deploy_gateway.yml  deploy_langgraph.yml  infra_deploy.yml  smoke_and_traces.yml
apps/agent-langgraph/: langgraph copy.json  langgraph.json  pyproject.toml  requirements.txt
apps/agent-langgraph/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
apps/agent-langgraph/my_agent/features/: lt_memory.py  web_search.py
apps/agent-langgraph/my_agent/graphs/: chat copy.py  chat.py
apps/agent-langgraph/my_agent/utils/: checkpointer.py  nodes.py  state.py  tools.py
apps/chainlit-ui/: Dockerfile  chainlit.toml  pyproject.toml  requirements.txt
apps/chainlit-ui/auth/: auth.config.js  auth.js
apps/chainlit-ui/auth-test/: auth.config.js  auth.js  index.html
apps/chainlit-ui/src/: main copy.py  main.py  server copy.py  server.py  settings.py  settings_websearch.py  sse_utils.py  threads_client copy.py  threads_client.py
apps/chainlit-ui/src/.chainlit/: config.toml
apps/chainlit-ui/src/auth/: auth - Copy.js  auth.config - Copy.js  auth.config.js  auth.js  index.html
apps/chainlit-ui/src/public/: hide-default-new-chat.css  login-redirect copy.js  login-redirect.js  markdown-theme.css  profile-menu.js
apps/gateway-fastapi/: Dockerfile  pyproject.toml  requirements.txt
apps/gateway-fastapi/src/: main copy.py  main.py
apps/gateway-fastapi/src/auth/: entra.py
apps/gateway-fastapi/src/features/: profiles.py  threads.py  transcript copy.py  uploads copy.py  uploads.py  websearch.py
apps/gateway-fastapi/src/middlewares/: stream.py
apps/gateway-fastapi/src/proxy/: langgraph.py
connectors/arcade/: README.md  mcp.servers.json
docs/: FeaturesWishList.md  architecture.md  infra-setup.md  infraprereqssetup.md
docs/Architecture/: Architecture.md
docs/Features/: ChatResponsesStyledHTML.md  FeaturesWishList.md  FileUploads.md  LongTermMemory.md  OpenAIWebSearch.md  ProfileMenu.md  Safety&Guardrails.md  authenticationsetup.md  shorttermmemory.md
infra/aca/: README.md
