# Package/deps per LG Platform pyproject flow


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prynai-agent"
version = "0.0.1"
requires-python = ">=3.10"
dependencies = [
  "langgraph>=0.6.0",
  "langgraph-sdk>=0.1.66",
  "langchain-core>=0.2.38",
  "langsmith>=0.1.63",
  "httpx>=0.25.0"
]

[tool.hatch.build.targets.wheel]
packages = ["my_agent"]