# Package/deps per LG Platform pyproject flow


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prynai-agent"
version = "0.0.1"
requires-python = ">=3.11"
dependencies = [
  "langgraph>=0.6.0,<0.7",
  "langgraph-sdk>=0.2.9,<0.3",
  "langchain>=0.3.8",                 # NEW: for init_embeddings "openai:..." string
  "langchain-core>=0.3.76,<0.4",
  "langchain-openai>=0.3.30,<0.4",
  "langsmith>=0.4.30,<0.5",
  "httpx>=0.27,<1"
]

[tool.hatch.build.targets.wheel]
packages = ["my_agent"]