# apps/chainlit-ui/pyproject.toml
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prynai-chainlit-ui"
version = "0.0.1"
requires-python = ">=3.10"
dependencies = [
  "chainlit>=2.0.0",
  "fastapi>=0.115,<0.119",
  "uvicorn>=0.35,<0.38",
  "httpx>=0.25.0"
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

# ensure the auth assets are included in the wheel
[tool.hatch.build.targets.wheel.force-include]
"src/auth" = "src/auth"
