[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prynai-gateway"
version = "0.0.1"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115",
  "uvicorn>=0.29",
  "httpx>=0.25.0",
  "sse-starlette>=2.1.0,<2.2.0"
]

[tool.hatch.build.targets.wheel]
packages = ["src"]